# stm32-rust-test

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  memory.x  openocd.cfg  openocd.gdb
src/: elite_board.rs  main.backup.rs  main.rs
src/stm32f103_hal/: exti.rs  gpio.rs  mod.rs  pin_definitions.py  pin_definitions.rs
