[package]
authors = ["xiaoqie <xiaoqie108@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-rust-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
panic-halt = "0.2.0"
nb = "0.1.2"
cortex-m-rtfm = "0.5"
cortex-m-semihosting = "0.3.5"
alloc-cortex-m = "0.3.5"
[dependencies.cortex-m-rt]
version = "0.6.10"
features = ["device"]
[dependencies.stm32f1]
version = "0.9.0"
features = ["stm32f103", "rt"]
[dependencies.stm32f1xx-hal]
version = "0.5.0"
features = ["stm32f103", "rt", "high"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-rust-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = []
__my_building__ = []
